Changed/Removed text, fixed spacing, removed email/print

--- a/lgs.css
+++ b/lgs.css
@@ -4,7 +4,7 @@
     line-height: 1.2em;
 }*/
 .lgs-text {
-    margin-top: -10px;
+    margin-top: 0px;
     font-size: 32px;
     text-align: left;
 }
